--- a/creative.html
+++ b/creative.html
@@ -63,7 +63,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="assets/img/creative/logo.png" class="img-responsive" alt="">
+                    <!-- <img src="assets/img/creative/logo.png" class="img-responsive" alt=""> -->
                 </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -96,7 +96,7 @@
     <header style="background-image: url('assets/img/creative/bg-header.jpg');">
         <div class="intro-content">
             <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
-            <div class="brand-name">John Smith</div>
+            <div class="brand-name">Lazaro Nutrition</div>
             <hr class="colored">
             <div class="brand-name-subtext">An Online Portfolio For Creatives</div>
         </div>
@@ -111,10 +111,10 @@
                     <img src="assets/img/creative/about.jpg" class="img-responsive" alt="">
                 </div>
                 <div class="col-md-6 text-center">
-                    <h1>Hi, I'm John Smith</h1>
+                    <h1>Hi, we are team Lazaro</h1>
                     <hr class="colored">
-                    <p>I am a freelance web designer, developer, and photographer based in San Francisco, California. I have a professional background in graphic design, and a degree in Computer Science from the University of Central California.</p>
-                    <p>Whether your next project is an online store, website for your business, or a simple brochure, I'll be ready to help!</p>
+                    <p>Matt and Stacia have served in the Stockton community as well known health and fitness consultants for over ten years. With over 5,000 clients and numerous success stories, Matt and Stacia take pride and honor in every one of their clients. Their motivation comes from seeing people feel better than ever, taking their health back and living vivaciously. When working with Lazaro Nutrition you will have your own personalized health and wellness program tailored to your specific goals. </p>
+                    <p>Your program will address bettering your nutrition, training, rest and recovery, and other wellness aspects such as your mindset! If you feel the need for change in a positive direction, achieving optimal health inside and out let Matt and Stacia show you how to get started.</p>
                 </div>
             </div>
         </div>
@@ -235,92 +235,38 @@
             </div>
         </div>
     </section>
-    <section id="work" class="bg-gray">
+    <!-- <section id="work" class="bg-gray">
         <div class="container text-center wow fadeIn">
-            <h2>Case Studies</h2>
+            <h2>Sample Projects</h2>
             <hr class="colored">
-            <p>Here are some in depth case studies of larger projects that I've worked on in the past.</p>
+            <p>Here are a few projects that I have built in the past.</p>
         </div>
-    </section>
-    <section class="portfolio-carousel wow fadeIn">
+    </section> -->
+    <!-- <section class="portfolio-carousel wow fadeIn">
         <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-1.jpg')">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-4 col-md-push-8">
-                        <div class="project-details">
-                            <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
+                        <div class="project-details"> -->
+                           <!--  <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt=""> -->
+                            <!-- <span class="project-name"> --><!-- Yelp Bark --><!-- </span> -->
+                            <!-- <span class="project-description"> --><!-- MongoDB, Express, Angular, Node --><!-- </span> -->
+                            <!-- <hr class="colored">
                             <a href="#portfolioModal1" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
                         </div>
                     </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
-                    </div>
+                    <div class="col-md-8 col-md-pull-4 hidden-xs"> -->
+                        <!-- <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt=""> -->
+                    <!-- </div>
                 </div>
             </div>
-        </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-2.jpg')">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4 col-md-push-8">
-                        <div class="project-details">
-                            <img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal2" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-3.jpg')">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4 col-md-push-8">
-                        <div class="project-details">
-                            <img src="assets/img/client-logos/logo-1.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal3" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="item" style="background-image: url('assets/img/creative/portfolio/bg-4.jpg')">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4 col-md-push-8">
-                        <div class="project-details">
-                            <img src="assets/img/client-logos/logo-2.png" class="img-responsive client-logo" alt="">
-                            <span class="project-name">Project Name</span>
-                            <span class="project-description">Branding, Website Design</span>
-                            <hr class="colored">
-                            <a href="#portfolioModal4" data-toggle="modal" class="btn btn-outline-light">View Details <i class="fa fa-long-arrow-right fa-fw"></i></a>
-                        </div>
-                    </div>
-                    <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+        </div> -->
+        
     <section>
         <div class="container text-center wow fadeIn">
-            <h2>Portfolio</h2>
+            <h2>Services OR BLOG POSTS</h2>
             <hr class="colored">
-            <p>Here are some other projects that I've worked on.</p>
+            <p>Here are some services we provide.</p>
             <div class="row content-row">
                 <div class="col-lg-12">
                     <div class="portfolio-filter">
@@ -329,13 +275,13 @@
                                 <span class="filter active" data-filter="identity graphic logo web">All</span>
                             </li>
                             <li>
-                                <span class="filter" data-filter="identity">Identity</span>
+                                <span class="filter" data-filter="identity">Workshops</span>
                             </li>
                             <li>
-                                <span class="filter" data-filter="graphic">Graphic</span>
+                                <span class="filter" data-filter="graphic">Exercise</span>
                             </li>
                             <li>
-                                <span class="filter" data-filter="web">Web</span>
+                                <span class="filter" data-filter="web">Nutrition</span>
                             </li>
                         </ul>
                     </div>
@@ -349,8 +295,8 @@
                                 <img src="assets/img/portfolio/grid/identity/1.jpg" alt="">
                                 <div class="caption">
                                     <div class="caption-text">
-                                        <a class="text-title">Generic Inc.</a>
-                                        <span class="text-category">Brand Identity</span>
+                                        <a class="text-title">Workshop</a>
+                                        <span class="text-category">Psychology of Nutrition</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -501,16 +447,18 @@
                         <div class="item">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <p class="lead">"Working with John Smith was both a valuable and rewarding experience."</p>
+                                    <p class="lead">"Shout out to my nutritionist Matt Lazaro, for figuring out my nutritional needs after I seriously damaged my metabolism last year and suggesting a Ketogenic diet."</p>
                                     <hr class="colored">
-                                    <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, temporibus, laborum, dignissimos doloremque corporis alias nostrum recusandae culpa id quisquam harum impedit sed sunt non obcaecati vero ipsam aut fugit?</p>
+                                    <p class="quote"> Matt helped me reverse diet and figured out I crave fats more than carbs, so he monitored me on Keto and now I'm seeing ‪#‎keto‬ everywhere! 
+I didn't believe it at first, but you can put on serious muscle eating high fats and very low carbs. I also lost inches and a few pounds (but gained muscle, so scale didn't drop much).
+This is the first diet I've been on that doesn't feel like a diet - Five Guys & Chipotle yesterday!! I highly recommend it for those who struggle to stick with a diet long term. </p>
                                     <div class="testimonial-info">
                                         <div class="testimonial-img">
-                                            <img src="assets/img/testimonials/1.jpg" class="img-circle img-responsive" alt="">
+                                            <!-- <img src="assets/img/testimonials/1.jpg" class="img-circle img-responsive" alt=""> -->
                                         </div>
                                         <div class="testimonial-author">
-                                            <span class="name">Jim Walker</span>
-                                            <p class="small">CEO of GeneriCorp</p>
+                                            <span class="name">Leigh Paytner</span>
+                                            <p class="small"><!-- CEO of GeneriCorp --></p>
                                             <div class="stars">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
@@ -526,16 +474,16 @@
                         <div class="item">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <p class="lead">"John is an excellent designer, and we got our project done on time and on budget."</p>
+                                    <p class="lead">"I lost over 20 lbs and 10% body fat. My husband lost 30 lbs and 9% body fat."</p>
                                     <hr class="colored">
-                                    <p class="quote">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, temporibus, laborum, dignissimos doloremque corporis alias nostrum recusandae culpa id quisquam harum impedit sed sunt non obcaecati vero ipsam aut fugit?</p>
+                                    <p class="quote">Before starting with Matt, I would have called myself a fit person, but I knew I had some changes to make with my eating habits. I worked out 5 to 6 days a week, but if you looked at me I don’t think you could tell. My goal was to get lean and to start understanding the importance of eating the right foods. Matt helped me with that. He created a menu that was based on my goals, my body, and my likes and dislikes of food. Same as my friends, within a few weeks I noticed such amazing changes. I looked better, I felt better, I slept better and had more energy. It was such a change that even my husband set up his own appointment to see Matt. My results were everything I could ask for and more. I lost over 20 lbs and 10% body fat. My husband lost 30 lbs and 9% body fat. I now have people asking me where I workout, not “oh you workout?” The program/menu has now just become my way of life. Matt gave me the resources and knowledge to do this on my own. I thank him everyday for changing my life to a healthier and happier one.</p>
                                     <div class="testimonial-info">
                                         <div class="testimonial-img">
-                                            <img src="assets/img/testimonials/1.jpg" class="img-circle img-responsive" alt="">
+                                            <!-- <img src="assets/img/testimonials/1.jpg" class="img-circle img-responsive" alt=""> -->
                                         </div>
                                         <div class="testimonial-author">
-                                            <span class="name">Jim Walker</span>
-                                            <p class="small">CEO of GeneriCorp</p>
+                                            <span class="name">Riina & Kevin</span>
+                                            <p class="small"><!-- CEO of GeneriCorp --></p>
                                             <div class="stars">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
@@ -632,29 +580,29 @@
             </div>
         </div>
     </section>
-    <a href="https://wrapbootstrap.com/theme/vitality-multipurpose-one-page-theme-WB02K3KK3" class="btn btn-block btn-full-width">Buy Vitality Now!</a>
+    <a href="https://wrapbootstrap.com/theme/vitality-multipurpose-one-page-theme-WB02K3KK3" class="btn btn-block btn-full-width">Contact Us Now!</a>
     <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-phone"></i> Call</h4>
-                    <p>555-213-4567</p>
+                    <p>555-555-5555</p>
                 </div>
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-map-marker"></i> Visit</h4>
-                    <p>3481 Melrose Place
-                        <br>Beverly Hills, CA 90210</p>
+                    <p>Insert Address
+                        <br>Stockton, CA 95242</p>
                 </div>
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-envelope"></i> Email</h4>
-                    <p><a href="mailto:mail@example.com">mail@example.com</a>
+                    <p><a href="mailto:mail@example.com">lazaronutritioninfo@gmail.com</a>
                     </p>
                 </div>
             </div>
             <div class="row social">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <li><a href="#"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
+                        <li><a href="https://www.facebook.com/LazaroNutrition"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
                         </li>
@@ -685,7 +633,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2">
                             <img src="assets/img/client-logos/logo-1.png" class="img-responsive img-centered" alt="">
-                            <h2>Project Title</h2>
+                            <h2>Stories</h2>
                             <hr class="colored">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos modi in tenetur vero voluptatum sapiente dolores eligendi nemo iste ea. Omnis, odio enim sint quam dolorum dolorem. Nostrum, minus, ad.</p>
                         </div>
