--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
                     <div class="about-content">
                         <i class="fa fa-laptop fa-4x"></i>
                         <h3>Web Design</h3>
-                        <p>This theme includes the retina.js plugin for easy retina image support so your images and graphics will look great on mobile devices!</p>
+                        <p>Great User Interface!</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                     <div class="about-content">
                         <i class="fa fa-code fa-4x"></i>
                         <h3>Web Development</h3>
-                        <p>Vitality is built using Bootstrap 3, and is easy to edit and customize. LESS files are included as well for deeper customization.</p>
+                        <p>Full Stack JavaScript.</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
                         <i class="fa fa-camera-retro fa-4x"></i>
                         <h3>Photography</h3>
-                        <p>When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet!</p>
+                        <p><!-- When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet! --></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
                         <i class="fa fa-paint-brush fa-4x"></i>
                         <h3>Graphic Design</h3>
-                        <p>All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible.</p>
+                        <p><!-- All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible. --></p>
                     </div>
                 </div>
             </div>
