removed excess text

--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
                     <div class="about-content">
                         <i class="fa fa-laptop fa-4x"></i>
                         <h3>Web Design</h3>
-                        <p>Great User Interface!</p>
+                        <p><!-- Great User Interface! --></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
                     <div class="about-content">
                         <i class="fa fa-code fa-4x"></i>
                         <h3>Web Development</h3>
-                        <p>Full Stack JavaScript.</p>
+                        <p><!-- Full Stack JavaScript. --></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
