updated logos and removed contact

--- a/index.html
+++ b/index.html
@@ -501,16 +501,16 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
             </div>
         </div>
     </section>
-    <section class="cta-form bg-dark">
+    <!-- <section class="cta-form bg-dark">
         <div class="container text-center">
             <h3>Subscribe to our newsletter!</h3>
             <hr class="colored">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2"> -->
                     <!-- MailChimp Signup Form -->
-                    <div id="mc_embed_signup">
+                    <!-- <div id="mc_embed_signup"> -->
                         <!-- Replace the form action in the line below with your MailChimp embed action! For more informatin on how to do this please visit the Docs! -->
-                        <form role="form" action="//startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+                        <!-- <form role="form" action="//startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
                             <div class="input-group input-group-lg">
                                 <input type="email" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Email address...">
                                 <span class="input-group-btn">
@@ -522,12 +522,12 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                                 <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                     <!-- End MailChimp Signup Form -->
-                </div>
+               <!--  </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section id="contact">
         <div class="container wow fadeIn">
             <div class="row">
@@ -537,7 +537,7 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                     <p>I'd love to hear about your next project! Send me a message and I will see if I can help.</p>
                 </div>
             </div>
-            <div class="row content-row">
+            <!-- <div class="row content-row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
@@ -577,10 +577,10 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
-    <a href="https://wrapbootstrap.com/theme/vitality-multipurpose-one-page-theme-WB02K3KK3" class="btn btn-block btn-full-width">Contact Us Now!</a>
+    <!-- <a href="https://wrapbootstrap.com/theme/vitality-multipurpose-one-page-theme-WB02K3KK3" class="btn btn-block btn-full-width">Contact Us Now!</a> -->
     <footer class="footer" style="background-image: url('assets/img/bg-footer.jpg')">
         <div class="container text-center">
             <div class="row">
@@ -604,10 +604,15 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                     <ul class="list-inline">
                         <li><a href="https://www.facebook.com/LazaroNutrition"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-twitter fa-fw fa-2x"></i></a>
+                        <li><a href="https://plus.google.com/u/0/113872834081334679338/posts/p/pub"><i class="fa fa-google-plus fa-fw fa-2x"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin fa-fw fa-2x"></i></a>
+                        <li><a href="https://www.instagram.com/matt.lazaro/?hl=en"><i class="fa fa-instagram fa-fw fa-2x"></i></a>
                         </li>
+                        <li><a href="https://www.pinterest.com/onemlc/"><i class="fa fa-pinterest fa-fw fa-2x"></i></a>
+                        </li>
+
+                        
+
                     </ul>
                 </div>
             </div>
