--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Vitality</title>
+    <title>Lazaro Nutrition</title>
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Retina.js - Load first for faster HQ mobile images. -->
@@ -124,7 +124,7 @@
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
                     <h1>This is what I do</h1>
-                    <p>I provide web design, web development, photography, and graphic design services.</p>
+                    <p>Health and Wellness Consultant with over 12 years experience, specializing in, weight loss, muscle building, performance athletes, supplementation, and the like. Matt spends a great deal public speaking with countless seminars and workshops being held throughout the entire central valley. One of his passions is educating the public and sharing knowledge with all those eager to learn.</p>
                     <hr class="colored">
                 </div>
             </div>
@@ -178,9 +178,10 @@
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
-                    <h2>My Process</h2>
+                    <h2>Our Process</h2>
                     <hr class="colored">
-                    <p>Here is an overview of how I approach each new project.</p>
+                    <p>To get started begin by signing up for our newsletter containing recipes, videos specific to nutrition and training to help keep you on track, give you valuable insight that we share with our clients, and specials we may offer.
+                    The next step would be to contact us to schedule your 1 hour consultation, where you will receive a full evaluation of your current status including weight and body-fat analysis.  Then you will learn how our tailored programs will help you to achieve your goals, and get you started right away!</p>
                 </div>
             </div>
             <div class="row content-row">
@@ -264,9 +265,9 @@
         
     <section>
         <div class="container text-center wow fadeIn">
-            <h2>Services OR BLOG POSTS</h2>
+            <h2>Services</h2>
             <hr class="colored">
-            <p>Here are some services we provide.</p>
+            <p>We specialize in developing custom programs that are personal to you, interactive and progressive.  Our programs guarantee progress when you are diligent and consistent. We also take pride in teaching you how to, in time, achieve long-term sustainability in your new lifestyle.</p>
             <div class="row content-row">
                 <div class="col-lg-12">
                     <div class="portfolio-filter">
