new content changes

--- a/index.html
+++ b/index.html
@@ -131,29 +131,34 @@
             <div class="row text-center content-row">
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".2s">
                     <div class="about-content">
-                        <i class="fa fa-laptop fa-4x"></i>
-                        <h3>Web Design</h3>
-                        <p><!-- Great User Interface! --></p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".4s">
-                    <div class="about-content">
-                        <i class="fa fa-code fa-4x"></i>
-                        <h3>Web Development</h3>
-                        <p><!-- Full Stack JavaScript. --></p>
+                        <i class="fa fa-users fa-4x"></i>
+                        <h3>Consultation</h3>
+                        <h4>In Person Consultation: 1hr - $99.99</h4>
+                        <h4>Phone Consultation: 30min - $39.99</h4>
+                        <p>Fee waived upon program selection</p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".6s">
                     <div class="about-content">
-                        <i class="fa fa-camera-retro fa-4x"></i>
-                        <h3>Photography</h3>
+                        <i class="fa fa-balance-scale fa-4x"></i>
+                        <h3>90 day weight-loss program</h3>
+                        <h4>$349.99</h4>
                         <p><!-- When building this theme, we've paid close attention to how it looks on various screen sizes. Try it out on a phone or tablet! --></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
                     <div class="about-content">
-                        <i class="fa fa-paint-brush fa-4x"></i>
-                        <h3>Graphic Design</h3>
+                        <i class="fa fa-heart-o fa-4x"></i>
+                        <h3>180 day Transformation Program</h3>
+                        <h4>$599.99</h4>
+                        <p><!-- All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible. --></p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
+                    <div class="about-content">
+                        <i class="fa fa-calendar fa-4x"></i>
+                        <h3>1 year to Transform Your Life</h3>
+                        <h4>$599.99</h4>
                         <p><!-- All of our themes are crafted with care, and we strive to make your experience as one of our customers the best as possible. --></p>
                     </div>
                 </div>
@@ -191,10 +196,10 @@
                             <i class="fa fa-clipboard"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Plan</h3>
+                            <h3 class="media-heading">Custom Plan</h3>
                             <ul>
-                                <li>Client interview</li>
-                                <li>Gather consumer data</li>
+                                <li>Custom Meal Plan</li>
+                                <li>Custom Supplement Regimen</li>
                                 <li>Create content strategy</li>
                                 <li>Analyze research</li>
                             </ul>
@@ -204,14 +209,14 @@
                 <div class="col-md-4 wow fadeIn" data-wow-delay=".4s">
                     <div class="media">
                         <div class="pull-left">
-                            <i class="fa fa-pencil"></i>
+                            <i class="fa fa-phone"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Create</h3>
+                            <h3 class="media-heading">Custom Support</h3>
                             <ul>
-                                <li>Build wireframe</li>
-                                <li>Gather client feedback</li>
-                                <li>Code development</li>
+                                <li>Weekly Mindset Coaching</li>
+                                <li>Weekly Check-ins</li>
+                                <li>Weekly Recipe and Newsletter</li>
                                 <li>Marketing review</li>
                             </ul>
                         </div>
@@ -220,15 +225,14 @@
                 <div class="col-md-4 wow fadeIn" data-wow-delay=".6s">
                     <div class="media">
                         <div class="pull-left">
-                            <i class="fa fa-rocket"></i>
+                            <i class="fa fa-book"></i>
                         </div>
                         <div class="media-body">
-                            <h3 class="media-heading">Launch</h3>
+                            <h3 class="media-heading">Resources</h3>
                             <ul>
-                                <li>Deploy website</li>
-                                <li>Market product launch</li>
-                                <li>Collect UX data</li>
-                                <li>Quarterly maintenence</li>
+                                <li>Training Guidance and Recommendations</li>
+                                <li>Hydration Protocal</li>
+                                <li>Food Lists</li>
                             </ul>
                         </div>
                     </div>
