--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
             <div class="brand-name">Lazaro Nutrition</div>
             <hr class="colored">
-            <div class="brand-name-subtext">An Online Portfolio For Creatives</div>
+           <!--  <div class="brand-name-subtext">An Online Portfolio For Creatives</div> -->
         </div>
         <div class="scroll-down">
             <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
@@ -123,7 +123,7 @@
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
-                    <h1>This is what I do</h1>
+                    <h1>This is what we do</h1>
                     <p>Health and Wellness Consultant with over 12 years experience, specializing in, weight loss, muscle building, performance athletes, supplementation, and the like. Matt spends a great deal public speaking with countless seminars and workshops being held throughout the entire central valley. One of his passions is educating the public and sharing knowledge with all those eager to learn.</p>
                     <hr class="colored">
                 </div>
