new changes to contact us

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </nav>
     <header style="background-image: url('assets/img/creative/bg-header.jpg');">
         <div class="intro-content">
-            <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt="">
+            <!-- <img src="assets/img/creative/profile.png" class="img-responsive img-centered" alt=""> -->
             <div class="brand-name">Lazaro Nutrition</div>
             <hr class="colored">
            <!--  <div class="brand-name-subtext">An Online Portfolio For Creatives</div> -->
@@ -539,7 +539,7 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="colored">
-                    <p>I'd love to hear about your next project! Send me a message and I will see if I can help.</p>
+                    <p>We'd love to help make you a healhier, stronger and more successful you! Send us a message and and we'll get started: lazaronutritioninfo@gmail.com</p>
                 </div>
             </div>
             <!-- <div class="row content-row">
@@ -623,7 +623,7 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
             </div>
             <div class="row copyright">
                 <div class="col-lg-12">
-                    <p class="small">&copy; 2016 Rob Merrill</p>
+                    <p class="small">&copy; 2016 Lazaro Nutrition</p>
                 </div>
             </div>
         </div>
