--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 <div class="caption">
                                     <div class="caption-text">
                                         <a class="text-title">Brands</a>
-                                        <span class="text-category">Web Development</span>
+                                        <span class="text-category">Testimony</span>
                                     </div>
                                     <div class="caption-bg"></div>
                                 </div>
@@ -537,7 +537,7 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>Contact Us</h2>
                     <hr class="colored">
                     <p>We'd love to help make you a healhier, stronger and more successful you! Send us a message and and we'll get started: lazaronutritioninfo@gmail.com</p>
                 </div>
