--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#programs">Programs</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#process">Process</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Work</a>
+                        <a class="page-scroll" href="#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -119,7 +119,7 @@
             </div>
         </div>
     </section>
-    <section id="services" class="bg-gray">
+    <section id="programs" class="bg-gray">
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
@@ -267,7 +267,7 @@
             </div>
         </div> -->
         
-    <section>
+    <section id="services">
         <div class="container text-center wow fadeIn">
             <h2>Services</h2>
             <hr class="colored">
