hid blog posts for how

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a class="page-scroll" href="#process">Process</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#testimonies">Testimonies</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -267,7 +267,7 @@
             </div>
         </div> -->
         
-    <section id="services">
+    <!-- <section id="services">
         <div class="container text-center wow fadeIn">
             <h2>Services</h2>
             <hr class="colored">
@@ -443,8 +443,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="testimonials bg-gray">
+    </section> -->
+    <section id="testimonies" class="testimonials bg-gray">
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -600,7 +600,7 @@ This is the first diet I've been on that doesn't feel like a diet - Five Guys & 
                 </div>
                 <div class="col-md-4 contact-details">
                     <h4><i class="fa fa-envelope"></i> Email</h4>
-                    <p><a href="mailto:mail@example.com">lazaronutritioninfo@gmail.com</a>
+                    <p><a href="mailto:lazaronutritioninfo@gmail.com">lazaronutritioninfo@gmail.com</a>
                     </p>
                 </div>
             </div>
